--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,90 +62,136 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_below="@id/titulo"
             android:layout_margin="10dp"
             android:weightSum="2">
 
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                >
+                android:layout_weight="1">
+
+
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    >
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="center"
-                        android:adjustViewBounds="true"
-                        android:background="@drawable/perfiluser"
-                        />
-
-                    <TextView
-                        android:id="@+id/userName"
-                        android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:adjustViewBounds="true"
-                        android:text="King Viruz"
-                        android:textStyle="bold"
-                        android:textSize="15dp"
-                        android:textColor="@color/rojo_franjaitemres"
-                        />
+                        >
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:scaleType="center"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/usuario_rojo"
+                            />
+                        <TextView
+                            android:id="@+id/userName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:adjustViewBounds="true"
+                            android:layout_marginLeft="1dp"
+                            android:text="King Viruz"
+                            android:textStyle="bold"
+                            android:textSize="15dp"
+                            android:textColor="@color/rojo_franjaitemres"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:scaleType="center"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/usuario_rojo"
+                            />
+                        <TextView
+                            android:id="@+id/cedula"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:adjustViewBounds="true"
+                            android:layout_marginLeft="1dp"
+                            android:text="11935099"
+                            android:textStyle="bold"
+                            android:textSize="15dp"
+                            android:textColor="@color/rojo_franjaitemres"
+                            />
+                    </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:scaleType="center"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/usuario_rojo"
+                            />
+                        <TextView
+                            android:id="@+id/correo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:adjustViewBounds="true"
+                            android:layout_marginLeft="1dp"
+                            android:text="correoPrueba@gmail.com"
+                            android:textStyle="bold"
+                            android:textSize="10dp"
+                            android:textColor="@color/rojo_franjaitemres"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
 
 
             </LinearLayout>
+
             <LinearLayout
-                android:id="@+id/nombrePersona"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                
                 android:layout_weight="1">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:scaleType="center"
-                    android:adjustViewBounds="true"
-                    android:background="@drawable/perfiluser"
-                    />
-
-                <TextView
-                    android:id="@+id/userName2"
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:adjustViewBounds="true"
-                    android:text="1193505849"
-                    android:textStyle="bold"
-                    android:textSize="15dp"
-                    android:textColor="@color/rojo_franjaitemres"
-                    />
+                    android:layout_margin="5dp"
+                    android:elevation="0dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardElevation="0dp"
+                    >
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="center"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/usuario_rojo"
+                        />
+                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-
-            </LinearLayout>
-
-
-
-
-
 
         </LinearLayout>
+
+
+
+
+
+
+
+
+
 
 
 
